--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -24,15 +24,17 @@ header figure img{
 nav ul li,#AyudaIngresar ul li{
     display:inline-block;
     list-style: none;
-    padding: 48px 1.5%;
-    transition: 0.5s;
+    width:80px;
+    text-align:center;
+    margin:0;
+    padding:0;
 }
 nav{
     float:left;
 }
 
 #AyudaIngresar ul,nav ul{
-    width:150px;
+    width:170px;
 }
 
 form input{
@@ -67,22 +69,16 @@ nav ul li a:hover{
     background-color: #c4c7d7;
     color: #071a2a;
     text-decoration: underline;
-    cursor: pointer;
 }
 
-a{
-    text-decoration: none;
-    transition: 0.7s;
-    display:block;
-}
 
 header nav ul li a{
     display:block;
+    padding: 48px 1.5%;
+    text-decoration:none;
+    transition: 0.5s;
 }
 
-ul li#Daleloco{
-    display:block;
-}
 h3{
     margin:20px 0;
 }
@@ -109,7 +105,6 @@ aside{
 main section{
     width:68%;
     float:left;
-    background-color:blue;
 }
 
 figure img{
@@ -129,15 +124,18 @@ article input{
 
 main section section{
     width:100%;
-    background-color:yellow;
 }
 
 section article{
     width:32%;
-    background-color:green;
     margin:10px 0;
     float:left;
 }
 details p{
     word-wrap: break-word;
+}
+
+.ElDeEnMedio{
+    margin:10px 12px;
+    
 }
