Falta rellenar noticias

--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -59,18 +59,12 @@ input, a{
 #AyudaIngresar{
     float:right;
 }
-/*
-nav ul li:hover{
-    background-color: #c4c7d7;
-}
-*/
 
 nav ul li a:hover{
     background-color: #c4c7d7;
     color: #071a2a;
     text-decoration: underline;
 }
-
 
 header nav ul li a{
     display:block;
@@ -90,21 +84,9 @@ body{
 aside{
     background-color: #c4c7d7;
     float:right;
-    margin-left:2%;
-    padding:0 2%;
+    /*margin-left:2%;*/
+    padding:10px 2%;
     width:25%;
-}
-
-
-main section {
-    width:70%;
-    margin: 0 auto;
-    padding:50px 0;
-}
-main section section{
-    width: 651px;
-    padding:0;
-    float:left;
 }
 
 figure img{
@@ -120,6 +102,21 @@ article input{
     letter-spacing: 2px;
     background-color:#071a2a;
     color:#f2f6f5;
+}
+
+main section {
+    width:70%;
+    margin: 0 auto;
+    padding:50px 0;
+}
+main section section{
+    width: 69%;
+    padding:0;
+    float:left;
+}
+main section section section{
+    width:100%;
+    margin-bottom:46px;
 }
 
 main section section section section{
@@ -143,7 +140,7 @@ details p{
 }
 
 .ElDeEnMedio{
-    margin:0 13px;
+    margin:0 2%;
     
 }
 main section section section footer{
@@ -153,7 +150,11 @@ main section section section footer{
     padding:3px 15px;
     letter-spacing: 1px;
 }
-#Pepe{
-    height:200px;
-    background-color:red;
+
+main #Noticias{
+    width:100%;
+    background-color:#dde1e7;
+    overflow: auto;
+    padding:3% 15%;
+    margin
 }
