--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -216,3 +216,23 @@ main #Noticias #UltimaFoto,main #Noticias #UltimoArticulo{
     display:block;
     margin: 5.5% 0 5% 0;
 }
+footer{
+    background-color:#071a2a;
+    clear:both;
+    overflow:auto;
+    padding:20px;
+}
+footer p{
+    color:white;
+    float:left;
+    margin-top:10px;
+} 
+footer figure{
+    float:right;
+} 
+footer figure img{
+    width:40px;
+    height:40px;
+    margin-left:15px;
+}
+
