--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -42,6 +42,20 @@ figure img{
     width:100%;
 }
 
+input[type=button]{
+    padding:4px 7px;
+    letter-spacing: 4px;
+    background-color:#071a2a;
+    color:#f2f6f5;
+    text-transform:uppercase;
+    transition: 0.3s;
+    border: 2px solid #071a2a;
+}
+input[type=button]:hover{ /* Cuando se para sobre el botón, cambia los colores con una transición */
+    background-color: #f2f6f5;
+    color: #828588;            
+}
+
 /*Header*/
 header{
     height: 114px;
@@ -152,15 +166,6 @@ section aside article{
 .ElDeEnMedio{ /*Esta clase está para los artículos de en medio de las secciones, dan un espacio en los laterales*/
     margin:0 2% 5% 2%;
 }
-
-article input,#Suscribite form input[type=button]{
-    padding:7px;
-    letter-spacing: 2px;
-    background-color:#071a2a;
-    color:#f2f6f5;
-    text-transform:uppercase;
-}
-
 
 main section section footer{
     background-color: #c4c7d7;
