--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -109,7 +109,7 @@ header form{
     float: left;
 }
 
-header form input{
+header form input[type="text"]{
     width: 170px;
     padding: 8px 8px 8px 40px;
     background-image: url("../img/iconoBuscar.png");
@@ -120,6 +120,10 @@ header form input{
     margin-left: 6%;
     margin-top: 40px;
     color: #69779b;
+}
+input[type=text]:focus{
+    transition: 0.4s;
+    background-color: #dde1e7;
 }
 
 /*Cuerpo*/
@@ -195,7 +199,7 @@ main #Noticias #UltimaFoto,main #Noticias #UltimoArticulo{
     float:right;
 }
 #Ayuda{
-    width:20%;
+    width:30%;
     height:20%;
     float:left;
     margin-left:15%;
