--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -58,17 +58,17 @@ input[type=button]:hover{ /* Cuando se para sobre el botón, cambia los colores 
 
 /*Header*/
 header{
-    height: 114px;
     padding: 0 15%;
     font-size: 14px;
     border-bottom: 4px solid #071a2a;
+    overflow: auto;
 }
 header figure img{
     width: 100px;
-    height: 100px;
+    height: 116px;
     float: left;
     margin-right: 16%;
-    padding-top: 14px;
+    margin-top: 14px;
 }
 
 nav{
@@ -81,20 +81,20 @@ nav{
 
 #AyudaIngresar ul,nav ul{
     width:170px;
+    height: 130px;
 }
 
-nav ul li,#AyudaIngresar ul li{
+nav ul li, #AyudaIngresar ul li{
     display:inline-block;
     list-style: none;
     width:80px;
     text-align:center;
-    margin:0;
-    padding:0;
+    height: 100%;
 }
 
 header nav ul li a{
     display:block;
-    padding: 48px 1.5%;
+    padding: 56px 2.5%;
     text-decoration:none;
     transition: 0.5s;
     color: #69779b;
@@ -118,9 +118,10 @@ header form input[type="text"]{
     border: 2px solid #071a2a;
     border-radius: 20px;
     margin-left: 6%;
-    margin-top: 40px;
+    margin-top: 48px;
     color: #69779b;
 }
+
 input[type=text]:focus{
     transition: 0.4s;
     background-color: #dde1e7;
@@ -134,6 +135,10 @@ main section {
     margin: 0 auto;
     padding:50px 0;
     overflow:auto;
+}
+
+input[type=button]{
+    cursor: pointer;
 }
 
 aside{
@@ -249,10 +254,10 @@ footer ul li{
 #Face,#Insta,#Tw{
     background-image:url("../img/sprite.png");
     background-size: 118px 100px ;
+    cursor: pointer;
 }
 #Face{
-    background-position:0px -23.5px;
-    
+    background-position:0px -23.5px;    
 }
 #Insta{
     background-position:-82px -24px;
