Auto stash before merge of "master" and "origin/master"

--- a/Proyecto - Diseño de Interfaz Web/admin/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/admin/estilos.css
@@ -39,7 +39,7 @@ input[type=submit]:hover { /* Cuando se para sobre el botón, cambia los colores
     color: #828588;            
 }
 
-input[type=checkbox], input[type=radio], input[type=submit], label {
+input[type=checkbox], input[type=radio], input[type=submit], input[type=file], input[type=button], label, select {
     cursor: pointer;
 }
 
