--- a/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
+++ b/Proyecto - Diseño de Interfaz Web/frontend/estilos.css
@@ -50,6 +50,9 @@ input[type=button]{
     text-transform:uppercase;
     transition: 0.3s;
     border: 2px solid #071a2a;
+    /*position:absolute;
+    bottom:0;*/
+    
 }
 input[type=button]:hover{ /* Cuando se para sobre el botón, cambia los colores con una transición */
     background-color: #f2f6f5;
@@ -162,6 +165,8 @@ main section section section{
 
 main section section article{
     width:32%;
+    /*height: 270px;
+    position:relative;*/
     float:left;
     margin-bottom:3.5%;
 }
